# trigger_sync

./: CMakeLists.txt  LICENSE  README.md  package.xml  readme.txt
include/TICSync/: ConvexEnvelope.h  Core.h  LinearOneWayClockSync.h  LinearTwoWayClockSync.h  MaxSepFilter.h  SwitchingOneWayClockSync.h  SwitchingTwoWayClockSync.h  TimestampFilter.h  TimestampMapper.h  TimingEnvelope.h  dataTypes.h  exceptions.h  geometry.h  utils.h
include/trigger_sync/: trigger_sync.h
launch/: pps_trigger.launch  stabilise.launch  user_pps_trigger.launch
msg/: Event.msg  EventStamped.msg
src/: OnlineHist.py  local_clock_syncroniser_node.cpp  plot_clock.py  pps_config.c  pps_trigger.cpp  stabilise_camera.cpp  test_trigger_sync.cpp  timepps.h  trigger_sync.cpp
