<?xml version="1.0"?>
<package>
  <name>trigger_sync</name>
  <version>0.0.0</version>
  <description>The trigger_sync package - learns the mapping between distributed clocks </description>
  <author>Andrew English</author>
  <maintainer email="asdfasd@assdzkflj.asdf">englisha</maintainer>
  <license>GPL</license>
  <url></url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
   <build_depend>camera_info_manager</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ackerman_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>camera_info_manager</run_depend>
</package>



